# softfloat

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  COPYING.txt  Makefile  README.md
example/: example.c  example.cpp  example_flexfloat.c  example_flexfloat.cpp
source/: extF80M_to_f8.c  extF80_to_f8.c  f128M_to_f8.c  f128_to_f8.c  f16_to_f8.c  f32_to_f8.c  f64_to_f8.c  f8_add.c  f8_div.c  f8_eq.c  f8_eq_signaling.c  f8_isSignalingNaN.c  f8_le.c  f8_le_quiet.c  f8_lt.c  f8_lt_quiet.c  f8_mul.c  f8_mulAdd.c  f8_rem.c  f8_roundToInt.c  f8_sqrt.c  f8_sub.c  f8_to_extF80.c  f8_to_extF80M.c  f8_to_f128.c  f8_to_f128M.c  f8_to_f16.c  f8_to_f32.c  f8_to_f64.c  f8_to_i32.c  f8_to_i32_r_minMag.c  f8_to_i64.c  f8_to_i64_r_minMag.c  f8_to_ui32.c  f8_to_ui32_r_minMag.c  f8_to_ui64.c  f8_to_ui64_r_minMag.c  flexfloat.c  i32_to_f8.c  i64_to_f8.c  (+11 more)
source/8086/: s_commonNaNToF8UI.c  s_f8UIToCommonNaN.c  s_propagateNaNF8UI.c  specialize.h
source/include/: flexfloat.h  flexfloat.hpp  internals.h  primitives.h  softfloat.h  softfloat.hpp  softfloat_types.h
