cmake_minimum_required(VERSION 3.13)

project(softfloat)

set (CMAKE_CXX_STANDARD 14)

SET(SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/source")
SET(SPECIALIZE_TYPE 8086)
SET(SOFTFLOAT_OPTS "-DSOFTFLOAT_ROUND_ODD -DINLINE_LEVEL=5 -DSOFTFLOAT_FAST_DIV32TO16 -DSOFTFLOAT_FAST_DIV64TO32")

include_directories(softfloat PUBLIC
        "${SOURCE_DIR}/${SPECIALIZE_TYPE}"
        "${SOURCE_DIR}/include"
        "${CMAKE_CURRENT_SOURCE_DIR}/build/Linux-386-GCC"
        )

add_library(sw SHARED
        ${SOURCE_DIR}/s_compare96M.c
        ${SOURCE_DIR}/s_compare128M.c
        ${SOURCE_DIR}/s_shortShiftLeft64To96M.c
        ${SOURCE_DIR}/s_shortShiftLeftM.c
        ${SOURCE_DIR}/s_shiftLeftM.c
        ${SOURCE_DIR}/s_shortShiftRightM.c
        ${SOURCE_DIR}/s_shortShiftRightJam64.c
${SOURCE_DIR}/s_shortShiftRightJamM.c
${SOURCE_DIR}/s_shiftRightJam32.c
${SOURCE_DIR}/s_shiftRightJam64.c
${SOURCE_DIR}/s_shiftRightJamM.c
${SOURCE_DIR}/s_shiftRightM.c
${SOURCE_DIR}/s_countLeadingZeros8.c
${SOURCE_DIR}/s_countLeadingZeros16.c
${SOURCE_DIR}/s_countLeadingZeros32.c
${SOURCE_DIR}/s_countLeadingZeros64.c
${SOURCE_DIR}/s_addM.c
${SOURCE_DIR}/s_addCarryM.c
${SOURCE_DIR}/s_addComplCarryM.c
${SOURCE_DIR}/s_negXM.c
${SOURCE_DIR}/s_sub1XM.c
${SOURCE_DIR}/s_subM.c
${SOURCE_DIR}/s_mul64To128M.c
${SOURCE_DIR}/s_mul128MTo256M.c
${SOURCE_DIR}/s_approxRecip_1Ks.c
${SOURCE_DIR}/s_approxRecip32_1.c
${SOURCE_DIR}/s_approxRecipSqrt_1Ks.c
${SOURCE_DIR}/s_approxRecipSqrt32_1.c
${SOURCE_DIR}/s_remStepMBy32.c


${SOURCE_DIR}/${SPECIALIZE_TYPE}/softfloat_raiseFlags.c
${SOURCE_DIR}/${SPECIALIZE_TYPE}/s_f16UIToCommonNaN.c
${SOURCE_DIR}/${SPECIALIZE_TYPE}/s_commonNaNToF16UI.c
${SOURCE_DIR}/${SPECIALIZE_TYPE}/s_propagateNaNF16UI.c
${SOURCE_DIR}/${SPECIALIZE_TYPE}/s_f32UIToCommonNaN.c
${SOURCE_DIR}/${SPECIALIZE_TYPE}/s_commonNaNToF32UI.c
${SOURCE_DIR}/${SPECIALIZE_TYPE}/s_propagateNaNF32UI.c
${SOURCE_DIR}/${SPECIALIZE_TYPE}/s_f64UIToCommonNaN.c
${SOURCE_DIR}/${SPECIALIZE_TYPE}/s_commonNaNToF64UI.c
${SOURCE_DIR}/${SPECIALIZE_TYPE}/s_propagateNaNF64UI.c
${SOURCE_DIR}/${SPECIALIZE_TYPE}/extF80M_isSignalingNaN.c
${SOURCE_DIR}/${SPECIALIZE_TYPE}/s_extF80MToCommonNaN.c
${SOURCE_DIR}/${SPECIALIZE_TYPE}/s_commonNaNToExtF80M.c
${SOURCE_DIR}/${SPECIALIZE_TYPE}/s_propagateNaNExtF80M.c
${SOURCE_DIR}/${SPECIALIZE_TYPE}/f128M_isSignalingNaN.c
${SOURCE_DIR}/${SPECIALIZE_TYPE}/s_f128MToCommonNaN.c
${SOURCE_DIR}/${SPECIALIZE_TYPE}/s_commonNaNToF128M.c
${SOURCE_DIR}/${SPECIALIZE_TYPE}/s_propagateNaNF128M.c


${SOURCE_DIR}/s_roundToUI32.c
${SOURCE_DIR}/s_roundMToUI64.c
${SOURCE_DIR}/s_roundToI32.c
${SOURCE_DIR}/s_roundMToI64.c
${SOURCE_DIR}/s_normSubnormalF16Sig.c
${SOURCE_DIR}/s_roundPackToF16.c
${SOURCE_DIR}/s_normRoundPackToF16.c
${SOURCE_DIR}/s_addMagsF16.c
${SOURCE_DIR}/s_subMagsF16.c
${SOURCE_DIR}/s_mulAddF16.c
${SOURCE_DIR}/s_normSubnormalF32Sig.c
${SOURCE_DIR}/s_roundPackToF32.c
${SOURCE_DIR}/s_normRoundPackToF32.c
${SOURCE_DIR}/s_addMagsF32.c
${SOURCE_DIR}/s_subMagsF32.c
${SOURCE_DIR}/s_mulAddF32.c
${SOURCE_DIR}/s_normSubnormalF64Sig.c
${SOURCE_DIR}/s_roundPackToF64.c
${SOURCE_DIR}/s_normRoundPackToF64.c
${SOURCE_DIR}/s_addMagsF64.c
${SOURCE_DIR}/s_subMagsF64.c
${SOURCE_DIR}/s_mulAddF64.c
${SOURCE_DIR}/s_tryPropagateNaNExtF80M.c
${SOURCE_DIR}/s_invalidExtF80M.c
${SOURCE_DIR}/s_normExtF80SigM.c
${SOURCE_DIR}/s_roundPackMToExtF80M.c
${SOURCE_DIR}/s_normRoundPackMToExtF80M.c
${SOURCE_DIR}/s_addExtF80M.c
${SOURCE_DIR}/s_compareNonnormExtF80M.c
${SOURCE_DIR}/s_isNaNF128M.c
${SOURCE_DIR}/s_tryPropagateNaNF128M.c
${SOURCE_DIR}/s_invalidF128M.c
${SOURCE_DIR}/s_shiftNormSigF128M.c
${SOURCE_DIR}/s_roundPackMToF128M.c
${SOURCE_DIR}/s_normRoundPackMToF128M.c
${SOURCE_DIR}/s_addF128M.c
${SOURCE_DIR}/s_mulAddF128M.c
${SOURCE_DIR}/softfloat_state.c
${SOURCE_DIR}/ui32_to_f16.c
${SOURCE_DIR}/ui32_to_f32.c
${SOURCE_DIR}/ui32_to_f64.c
${SOURCE_DIR}/ui32_to_extF80M.c
${SOURCE_DIR}/ui32_to_f128M.c
${SOURCE_DIR}/ui64_to_f16.c
${SOURCE_DIR}/ui64_to_f32.c
${SOURCE_DIR}/ui64_to_f64.c
${SOURCE_DIR}/ui64_to_extF80M.c
${SOURCE_DIR}/ui64_to_f128M.c
${SOURCE_DIR}/i32_to_f16.c
${SOURCE_DIR}/i32_to_f32.c
${SOURCE_DIR}/i32_to_f64.c
${SOURCE_DIR}/i32_to_extF80M.c
${SOURCE_DIR}/i32_to_f128M.c
${SOURCE_DIR}/i64_to_f16.c
${SOURCE_DIR}/i64_to_f32.c
${SOURCE_DIR}/i64_to_f64.c
${SOURCE_DIR}/i64_to_extF80M.c
${SOURCE_DIR}/i64_to_f128M.c
${SOURCE_DIR}/f16_to_ui32.c
${SOURCE_DIR}/f16_to_ui64.c
${SOURCE_DIR}/f16_to_i32.c
${SOURCE_DIR}/f16_to_i64.c
${SOURCE_DIR}/f16_to_ui32_r_minMag.c
${SOURCE_DIR}/f16_to_ui64_r_minMag.c
${SOURCE_DIR}/f16_to_i32_r_minMag.c
${SOURCE_DIR}/f16_to_i64_r_minMag.c
${SOURCE_DIR}/f16_to_f32.c
${SOURCE_DIR}/f16_to_f64.c
${SOURCE_DIR}/f16_to_extF80M.c
${SOURCE_DIR}/f16_to_f128M.c
${SOURCE_DIR}/f16_roundToInt.c
${SOURCE_DIR}/f16_add.c
${SOURCE_DIR}/f16_sub.c
${SOURCE_DIR}/f16_mul.c
${SOURCE_DIR}/f16_mulAdd.c
${SOURCE_DIR}/f16_div.c
${SOURCE_DIR}/f16_rem.c
${SOURCE_DIR}/f16_sqrt.c
${SOURCE_DIR}/f16_eq.c
${SOURCE_DIR}/f16_le.c
${SOURCE_DIR}/f16_lt.c
${SOURCE_DIR}/f16_eq_signaling.c
${SOURCE_DIR}/f16_le_quiet.c
${SOURCE_DIR}/f16_lt_quiet.c
${SOURCE_DIR}/f16_isSignalingNaN.c
${SOURCE_DIR}/f32_to_ui32.c
${SOURCE_DIR}/f32_to_ui64.c
${SOURCE_DIR}/f32_to_i32.c
${SOURCE_DIR}/f32_to_i64.c
${SOURCE_DIR}/f32_to_ui32_r_minMag.c
${SOURCE_DIR}/f32_to_ui64_r_minMag.c
${SOURCE_DIR}/f32_to_i32_r_minMag.c
${SOURCE_DIR}/f32_to_i64_r_minMag.c
${SOURCE_DIR}/f32_to_f16.c
${SOURCE_DIR}/f32_to_f64.c
${SOURCE_DIR}/f32_to_extF80M.c
${SOURCE_DIR}/f32_to_f128M.c
${SOURCE_DIR}/f32_roundToInt.c
${SOURCE_DIR}/f32_add.c
${SOURCE_DIR}/f32_sub.c
${SOURCE_DIR}/f32_mul.c
${SOURCE_DIR}/f32_mulAdd.c
${SOURCE_DIR}/f32_div.c
${SOURCE_DIR}/f32_rem.c
${SOURCE_DIR}/f32_sqrt.c
${SOURCE_DIR}/f32_eq.c
${SOURCE_DIR}/f32_le.c
${SOURCE_DIR}/f32_lt.c
${SOURCE_DIR}/f32_eq_signaling.c
${SOURCE_DIR}/f32_le_quiet.c
${SOURCE_DIR}/f32_lt_quiet.c
${SOURCE_DIR}/f32_isSignalingNaN.c
${SOURCE_DIR}/f64_to_ui32.c
${SOURCE_DIR}/f64_to_ui64.c
${SOURCE_DIR}/f64_to_i32.c
${SOURCE_DIR}/f64_to_i64.c
${SOURCE_DIR}/f64_to_ui32_r_minMag.c
${SOURCE_DIR}/f64_to_ui64_r_minMag.c
${SOURCE_DIR}/f64_to_i32_r_minMag.c
${SOURCE_DIR}/f64_to_i64_r_minMag.c
${SOURCE_DIR}/f64_to_f16.c
${SOURCE_DIR}/f64_to_f32.c
${SOURCE_DIR}/f64_to_extF80M.c
${SOURCE_DIR}/f64_to_f128M.c
${SOURCE_DIR}/f64_roundToInt.c
${SOURCE_DIR}/f64_add.c
${SOURCE_DIR}/f64_sub.c
${SOURCE_DIR}/f64_mul.c
${SOURCE_DIR}/f64_mulAdd.c
${SOURCE_DIR}/f64_div.c
${SOURCE_DIR}/f64_rem.c
${SOURCE_DIR}/f64_sqrt.c
${SOURCE_DIR}/f64_eq.c
${SOURCE_DIR}/f64_le.c
${SOURCE_DIR}/f64_lt.c
${SOURCE_DIR}/f64_eq_signaling.c
${SOURCE_DIR}/f64_le_quiet.c
${SOURCE_DIR}/f64_lt_quiet.c
${SOURCE_DIR}/f64_isSignalingNaN.c
${SOURCE_DIR}/extF80M_to_ui32.c
${SOURCE_DIR}/extF80M_to_ui64.c
${SOURCE_DIR}/extF80M_to_i32.c
${SOURCE_DIR}/extF80M_to_i64.c
${SOURCE_DIR}/extF80M_to_ui32_r_minMag.c
${SOURCE_DIR}/extF80M_to_ui64_r_minMag.c
${SOURCE_DIR}/extF80M_to_i32_r_minMag.c
${SOURCE_DIR}/extF80M_to_i64_r_minMag.c
${SOURCE_DIR}/extF80M_to_f16.c
${SOURCE_DIR}/extF80M_to_f32.c
${SOURCE_DIR}/extF80M_to_f64.c
${SOURCE_DIR}/extF80M_to_f128M.c
${SOURCE_DIR}/extF80M_roundToInt.c
${SOURCE_DIR}/extF80M_add.c
${SOURCE_DIR}/extF80M_sub.c
${SOURCE_DIR}/extF80M_mul.c
${SOURCE_DIR}/extF80M_div.c
${SOURCE_DIR}/extF80M_rem.c
${SOURCE_DIR}/extF80M_sqrt.c
${SOURCE_DIR}/extF80M_eq.c
${SOURCE_DIR}/extF80M_le.c
${SOURCE_DIR}/extF80M_lt.c
${SOURCE_DIR}/extF80M_eq_signaling.c
${SOURCE_DIR}/extF80M_le_quiet.c
${SOURCE_DIR}/extF80M_lt_quiet.c
${SOURCE_DIR}/f128M_to_ui32.c
${SOURCE_DIR}/f128M_to_ui64.c
${SOURCE_DIR}/f128M_to_i32.c
${SOURCE_DIR}/f128M_to_i64.c
${SOURCE_DIR}/f128M_to_ui32_r_minMag.c
${SOURCE_DIR}/f128M_to_ui64_r_minMag.c
${SOURCE_DIR}/f128M_to_i32_r_minMag.c
${SOURCE_DIR}/f128M_to_i64_r_minMag.c
${SOURCE_DIR}/f128M_to_f16.c
${SOURCE_DIR}/f128M_to_f32.c
${SOURCE_DIR}/f128M_to_f64.c
${SOURCE_DIR}/f128M_to_extF80M.c
${SOURCE_DIR}/f128M_roundToInt.c
${SOURCE_DIR}/f128M_add.c
${SOURCE_DIR}/f128M_sub.c
${SOURCE_DIR}/f128M_mul.c
${SOURCE_DIR}/f128M_mulAdd.c
${SOURCE_DIR}/f128M_div.c
${SOURCE_DIR}/f128M_rem.c
${SOURCE_DIR}/f128M_sqrt.c
${SOURCE_DIR}/f128M_eq.c
${SOURCE_DIR}/f128M_le.c
${SOURCE_DIR}/f128M_lt.c
${SOURCE_DIR}/f128M_eq_signaling.c
${SOURCE_DIR}/f128M_le_quiet.c
${SOURCE_DIR}/f128M_lt_quiet.c

        ${SOURCE_DIR}/${SPECIALIZE_TYPE}/s_commonNaNToF8UI.c
        ${SOURCE_DIR}/${SPECIALIZE_TYPE}/s_f8UIToCommonNaN.c
        ${SOURCE_DIR}/${SPECIALIZE_TYPE}/s_propagateNaNF8UI.c
        ${SOURCE_DIR}/extF80_to_f8.c
        ${SOURCE_DIR}/extF80M_to_f8.c
        ${SOURCE_DIR}/f128_to_f8.c
        ${SOURCE_DIR}/f128M_to_f8.c
        ${SOURCE_DIR}/f16_to_f8.c
        ${SOURCE_DIR}/f32_to_f8.c
        ${SOURCE_DIR}/f64_to_f8.c
        ${SOURCE_DIR}/f8_add.c
        ${SOURCE_DIR}/f8_div.c
        ${SOURCE_DIR}/f8_eq.c
        ${SOURCE_DIR}/f8_eq_signaling.c
        ${SOURCE_DIR}/f8_isSignalingNaN.c
        ${SOURCE_DIR}/f8_le.c
        ${SOURCE_DIR}/f8_le_quiet.c
        ${SOURCE_DIR}/f8_lt.c
        ${SOURCE_DIR}/f8_lt_quiet.c
        ${SOURCE_DIR}/f8_mul.c
        ${SOURCE_DIR}/f8_mulAdd.c
        ${SOURCE_DIR}/f8_rem.c
        ${SOURCE_DIR}/f8_roundToInt.c
        ${SOURCE_DIR}/f8_sqrt.c
        ${SOURCE_DIR}/f8_sub.c
        ${SOURCE_DIR}/f8_to_extF80.c
        ${SOURCE_DIR}/f8_to_extF80M.c
        ${SOURCE_DIR}/f8_to_f128.c
        ${SOURCE_DIR}/f8_to_f128M.c
        ${SOURCE_DIR}/f8_to_f16.c
        ${SOURCE_DIR}/f8_to_f32.c
        ${SOURCE_DIR}/f8_to_f64.c
        ${SOURCE_DIR}/f8_to_i32.c
        ${SOURCE_DIR}/f8_to_i32_r_minMag.c
        ${SOURCE_DIR}/f8_to_i64.c
        ${SOURCE_DIR}/f8_to_i64_r_minMag.c
        ${SOURCE_DIR}/f8_to_ui32.c
        ${SOURCE_DIR}/f8_to_ui32_r_minMag.c
        ${SOURCE_DIR}/f8_to_ui64.c
        ${SOURCE_DIR}/f8_to_ui64_r_minMag.c
        ${SOURCE_DIR}/flexfloat.c
        ${SOURCE_DIR}/i32_to_f8.c
        ${SOURCE_DIR}/i64_to_f8.c
        ${SOURCE_DIR}/s_addMagsF8.c
        ${SOURCE_DIR}/s_div_8.c
        ${SOURCE_DIR}/s_mulAddF8.c
        ${SOURCE_DIR}/s_normRoundPackToF8.c
        ${SOURCE_DIR}/s_normSubnormalF8Sig.c
        ${SOURCE_DIR}/s_recip_8.c
        ${SOURCE_DIR}/s_roundPackToF8.c
        ${SOURCE_DIR}/s_sqrt_8.c
        ${SOURCE_DIR}/s_subMagsF8.c
        ${SOURCE_DIR}/ui32_to_f8.c
        ${SOURCE_DIR}/ui64_to_f8.c
)

add_executable(example "${CMAKE_CURRENT_SOURCE_DIR}/example/example.cpp")
target_link_libraries(example PUBLIC sw)